compiler-core/src/language_server/tests/snapshots/gleam_core__language_server__tests__inline_var_action__inlining_pipeline.snap
---
source: compiler-core/src/language_server/tests/inline_var_action.rs
expression: "\nimport list\n\nfn main() {\n  let x = [1,2,3]\n  let result =\n  x\n  |> list.reverse()\n  |> list.map(fn(x) { x * 2})\n}\n        "
---

import list

fn main() {
  
  let result =
  [1, 2, 3]
  |> list.reverse()
  |> list.map(fn(x) { x * 2})
}
        
