compiler-core/src/language_server/tests/snapshots/gleam_core__language_server__tests__inline_var_action__inlining_tuple.snap
---
source: compiler-core/src/language_server/tests/inline_var_action.rs
expression: "\nimport list\n\nfn main() {\n  let x = [1, 2, 3]\n  #(1, x, 3)\n}\n        "
---

import list

fn main() {
  
  #(1, [1, 2, 3], 3)
}
        
